--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "mongoose-paginate-v2": "^1.8.0",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "short-uuid": "^4.2.2"
   }
 }
