--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "email-server",
-  "version": "1.0.0",
-  "description": "This is the email server for sending email and verification emails.",
+  "version": "0.0.0",
+  "description": "This is the email server for sending emails and verification emails.",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
+    "build": "sh build.sh email-server production NodeJS minor;",
     "test": "echo \"Error: no test specified\" && exit 1",
     "development": "NODE_ENV=development nodemon app.js",
     "production": "NODE_ENV=production node app.js"
