--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "sh build.sh email-server production NodeJS minor;",
     "test": "echo \"Error: no test specified\" && exit 1",
     "development": "NODE_ENV=development nodemon app.js",
-    "production": "sh build.sh email-server production NodeJS minor; NODE_ENV=production node app.js"
+    "production": "NODE_ENV=production node app.js"
   },
   "keywords": [
     "email-server, otp-server"
